--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 								<span class="contact-icon">
 									<i class="fas fa-phone"></i>
 								</span>
-								<span>Móvil</span>
+								<span>Móvil/Whatsapp</span>
 								<p>697170319</p>
 							</div>
 
