--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 								<span class="contact-icon">
 									<i class="fas fa-phone"></i>
 								</span>
-								<span>Móvil</span>
-								<p>697170319999</p>
+								<span>Móvil/Whatsapp</span>
+								<p>697170319</p>
 							</div>
 
 							<div>
