--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@
 								<span class="contact-icon">
 									<i class="fas fa-paper-plane"></i>
 								</span>
-								<span>E-Mail</span>
-								<p>fotografiadanielness@gmail.com</p>
+								<!--<span>E-Mail AQUÍ</span>-->
+								<a href="mailto:fotografiadanielness@gmail.com">ENVIAR CORREO</a>
+								<!--<p>fotografiadanielness@gmail.com</p>-->
 							</div>
 						
 						
