--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					<div class="cardcontainer">
 						<div class="card">
 							<img src="images/corazón.png">
-							<a href="special.html"></a>
+							<a href="special.html" class="transition"></a>
 							<h4>Para los corazones</h4>
 							<p>Reportajes de pareja, o individual desde 48€. Válido hasta el 15/02/2022</p>
 							<p>Ponte en contacto para saber más sobre la promoción de San Valentín</p>
