--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 					<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>
 					<li><a href="#" data-nav-section="about">Sobre Mí</a></li>
 					<li><a href="#" data-nav-section="contact">Contacto</a></li>
-					<li><a href="#" data-nav-section="special">San Valentín 2022</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -205,7 +204,7 @@
 							</a>
 						</div>
 					</div>
-					<div id="fh5co-special" data-section="special">
+					<!--<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
 							<img src="images/corazón.png">
@@ -214,7 +213,7 @@
 							<p>Reportajes de pareja, o individual desde 48€. Válido hasta el 15/02/2022</p>
 							<p>Ponte en contacto para saber más sobre la promoción de San Valentín</p>
 						</div>
-					</div>
+					</div>-->
 					
 				</div>
 
