--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
 							</a>
 						</div>
 					</div>
+					<div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 animate-box">
+						<div class="img-grid">
+							<img src="images/video 1.jpg" alt="video" class="img-responsive">
+							<p>vídeo promo</p>
+							<a href="video.html" class="transition">
+								<div>
+									<span class="fh5co-meta"></span>
+									<h2 class="fh5co-title">Vídeo Promocional</h2>
+								</div>
+							</a>
+						</div>
+					</div>
 					<!--<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
