--- a/video.html
+++ b/video.html
@@ -102,7 +102,7 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row text-center">
-							<h1 class="animate-box"></h1>
+							<!--<h1 class="animate-box"></h1>-->
 							<div class="fh5co-go animate-box">
 								<a href="#" class="js-fh5co-next">
 									Ver 
