--- a/boda.html
+++ b/boda.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Daniel Ness Fotografía &mdash;</title>
+	<title>Daniel Ness Fotografía</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Fotografía social en general, fotografía de boda" />
 	<meta name="keywords" content="reportaje boda mazagón, pre-boda mazagón, post-boda mazagón" />
@@ -63,17 +63,7 @@
 
 	</head>
 	<body>
-		<script type="text/javascript">
-			(function(window, document, dataLayerName, id) {
-			window[dataLayerName]=window[dataLayerName]||[],window[dataLayerName].push({start:(new Date).getTime(),event:"stg.start"});var scripts=document.getElementsByTagName('script')[0],tags=document.createElement('script');
-			function stgCreateCookie(a,b,c){var d="";if(c){var e=new Date;e.setTime(e.getTime()+24*c*60*60*1e3),d="; expires="+e.toUTCString()}document.cookie=a+"="+b+d+"; path=/"}
-			var isStgDebug=(window.location.href.match("stg_debug")||document.cookie.match("stg_debug"))&&!window.location.href.match("stg_disable_debug");stgCreateCookie("stg_debug",isStgDebug?1:"",isStgDebug?14:-1);
-			var qP=[];dataLayerName!=="dataLayer"&&qP.push("data_layer_name="+dataLayerName),isStgDebug&&qP.push("stg_debug");var qPString=qP.length>0?("?"+qP.join("&")):"";
-			tags.async=!0,tags.src="https://danielness.containers.piwik.pro/"+id+".js"+qPString,scripts.parentNode.insertBefore(tags,scripts);
-			!function(a,n,i){a[n]=a[n]||{};for(var c=0;c<i.length;c++)!function(i){a[n][i]=a[n][i]||{},a[n][i].api=a[n][i].api||function(){var a=[].slice.call(arguments,0);"string"==typeof a[0]&&window[dataLayerName].push({event:n+"."+i+":"+a[0],parameters:[].slice.call(arguments,1)})}}(i[c])}(window,"ppms",["tm","cm"]);
-			})(window, document, 'dataLayer', 'be30388f-7bfa-4b2f-aae0-25cfa2408885');
-			</script><noscript><iframe src="https://danielness.containers.piwik.pro/be30388f-7bfa-4b2f-aae0-25cfa2408885/noscript.html" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	
+		
 	
 	<div id="fh5co-header">
 		<div class="container">
