--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
 							</a>
 						</div>
 					</div>
-					<!--<div id="fh5co-special" data-section="special">
+					<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
-							<img src="images/corazón.png">
+							<img src="images/spring.jpg">
 							<a href="special.html" class="transition"></a>
-							<h4>Para los corazones</h4>
-							<p>Reportajes de pareja, o individual desde 48€. Válido hasta el 15/02/2022</p>
-							<p>Ponte en contacto para saber más sobre la promoción de San Valentín</p>
+							<h4>Especial Primavera</h4>
+							<p>Reportaje individual para RRSS desde 50€. Válido hasta el 30/06/2022</p>
+							<p>Ponte en contacto con el código "Junio22" para aprovechar esta promoción</p>
 						</div>
 					</div>-->
 					
