--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							</a>
 						</div>
 					</div>
-					<div id="fh5co-special" data-section="special">
+					<!--<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
 							<img src="images/spring.jpg">
