--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 								<span>Móvil/Whatsapp</span>
 								<p>697170319</p>
 							</div>
-
+							<a href="https://wa.me/34697170319?text=¡Hola!%20Me%20gustaría%20pedir%20hora%20para%20una%20revisión%20/%20consulta.%20Gracias!" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a> 
 							<div>
 								<span class="contact-icon">
 									<i class="fas fa-paper-plane"></i>
