--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<div class="col-md-8 col-md-offset-2 text-center section-heading animate-box">
 						<h2 class="fh5co-section-title">Sobre Mí</h2>
 						<p class="fh5co-lead">Me considero una persona afortunada, por poder dedicarme a lo que realmente 
-							me gusta, y lo valoro más cuando miro hacia atrás y recuerdo que no siempre ha sido así. Ya hace más de cuatro
+							me gusta, y lo valoro más cuando miro hacia atrás y recuerdo que no siempre ha sido así. Hace unos
 							años que me dedico plenamente a la fotografía, pero el gusanillo que picaba en los primeros proyectos,
 							los nervios, siguen allí. Desaparecen cuando me pongo detrás de la cámara, y me aislo totalmente 
 							del entorno para captar los mejores momentos, y el alma de los que fotografío.</p>
