--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
 	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -83,6 +86,7 @@
 			</nav>
 		</div>
 	</div>
+	
 	<div id="fh5co-main">
 		<div class="fh5co-overlay-mobile"></div>
 		<div id="fh5co-home" class="js-fullheight" data-section="home">
@@ -111,6 +115,7 @@
 			  	</ul>
 
 			</div>
+			
 		</div>
 
 		<div id="fh5co-portfolio" data-section="portfolio">
@@ -121,6 +126,8 @@
 						<p class="fh5co-lead animate-box"></p>
 					</div>
 				</div>
+				<a href="https://wa.me/34697170319?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
+					<i class="fa fa-whatsapp whatsapp-icon"></i></a>
 				<div class="row">
 					<div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 animate-box">
 						<div class="img-grid">
@@ -206,16 +213,16 @@
 							</a>
 						</div>
 					</div>
-					<!--<div id="fh5co-special" data-section="special">
+					<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
-							<img src="images/spring.jpg">
+							<img src="images/corazón.png">
 							<a href="special.html" class="transition"></a>
-							<h4>Especial Primavera</h4>
-							<p>Reportaje individual para RRSS desde 50€. Válido hasta el 30/06/2022</p>
-							<p>Ponte en contacto con el código "Junio22" para aprovechar esta promoción</p>
+							<h4>Especial San Valentín</h4>
+							<p>Reportaje para parejas desde 50€! Válido hasta el 01/02/2023</p>
+							<p>Ponte en contacto con el código "Valentín23" para aprovechar esta promoción</p>
 						</div>
-					</div>-->
+					</div>
 					
 				</div>
 
@@ -275,7 +282,7 @@
 								<span>Móvil/Whatsapp</span>
 								<p>697170319</p>
 							</div>
-							<a href="https://wa.me/34697170319?text=¡Hola!%20Me%20gustaría%20pedir%20hora%20para%20una%20revisión%20/%20consulta.%20Gracias!" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a> 
+							<a href="https://wa.me/34697170319?text=¡Hola!%20Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a> 
 							<div>
 								<span class="contact-icon">
 									<i class="fas fa-paper-plane"></i>
