--- a/boda.html
+++ b/boda.html
@@ -249,6 +249,59 @@
 					<figure class="animate-box">
 						<img src="images/Saray (25).jpg" alt="Free HTML5 Template by FREEHTML5.co" class="img-responsive">
 					</figure>
+
+					<div id="fh5co-content">
+						<div class="container">
+							<div class="row r-pb">
+								<div class="col-md-8 col-md-offset-2 text-center section-heading">
+									<h2 class="fh5co-section-title animate-box">Darío y Chiqui</h2>
+									<p class="fh5co-lead animate-box">Primero al Ayuntamiento, y después de cervecitas</p>
+								</div>
+							</div>
+			
+							<div class="row">
+								<figure class="animate-box">
+									<img src="images/Darío (1).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (2).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (3).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (4).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (5).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (6).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (7).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (8).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (9).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (10).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (11).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (12).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (13).jpg" alt="boda" class="img-responsive">
+								</figure>	
+								<figure class="animate-box">
+									<img src="images/Darío (14).jpg" alt="boda" class="img-responsive">
+								</figure>			
 					
 				</div>
 	
