--- a/familia.html
+++ b/familia.html
@@ -114,7 +114,69 @@
 			<div class="container">
 				<div class="row r-pb">
 					<div class="col-md-8 col-md-offset-2 text-center section-heading">
-						<h2 class="fh5co-section-title animate-box">Intro Text</h2>
+						<h2 class="fh5co-section-title animate-box">Emma y Carla</h2>
+						<p class="fh5co-lead animate-box">"Nos encantaría volver a Mazagón"</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (1).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (2).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (3).jpg" alt="familia" class="img-responsive">
+					</figure>	
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (4).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (5).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (6).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (7).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (8).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (9).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (10).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (11).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (12).jpg" alt="familia" class="img-responsive">
+					</figure>
+				<div class="row">
+					<figure class="animate-box">
+						<img src="images/Emma y Carla (13).jpg" alt="familia" class="img-responsive">
+					</figure>
+
+		<div id="fh5co-content">
+			<div class="container">
+				<div class="row r-pb">
+					<div class="col-md-8 col-md-offset-2 text-center section-heading">
+						<h2 class="fh5co-section-title animate-box">Manolo, María y sus dos tesoros</h2>
 						<p class="fh5co-lead animate-box">Una familia feliz, en un paraje de ensueño...</p>
 					</div>
 				</div>
