--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							</a>
 						</div>
 					</div>
-					<div id="fh5co-special" data-section="special">
+					<!--<div id="fh5co-special" data-section="special">
 					<div class="cardcontainer">
 						<div class="card">
 							<img src="images/corazón.png">
@@ -222,7 +222,7 @@
 							<p>Reportaje para parejas desde 50€! Válido hasta el 01/02/2023</p>
 							<p>Ponte en contacto con el código "Valentín23" para aprovechar esta promoción</p>
 						</div>
-					</div>
+					</div>-->
 					
 				</div>
 
