--- a/comunion.html
+++ b/comunion.html
@@ -93,7 +93,8 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row text-center">
-							<h1 class="animate-box">Comunión</h1>
+							<h1 class="animate-box">Comuniones 2023</h1>
+							<p class="texto-comunion">Como todos los años por estas fechas, las comuniones son una ocasión especial para unas fotos únicas. Me encantará salir con vosotros y elegir escenario entre tantos que nos ofrece Mazagón y sus alrededores.</p>
 							<div class="fh5co-go animate-box">
 								<a href="#" class="js-fh5co-next">
 									Ver Imágenes
