--- a/familia.html
+++ b/familia.html
@@ -114,6 +114,46 @@
 			<div class="container">
 				<div class="row r-pb">
 					<div class="col-md-8 col-md-offset-2 text-center section-heading">
+						<h2 class="fh5co-section-title animate-box">Vega y Saúl</h2>
+						<p class="fh5co-lead animate-box">Un paseo por la playa</p>
+					</div>
+				</div>
+
+				<div class="row">
+				 <figure class="animate-box">
+					<img src="images/Vega y Saúl (1).jpg" alt="familia" class="img-responsive">
+				</figure>
+				<div class="row">
+				<figure class="animate-box">
+						<img src="images/Vega y Saúl (2).jpg" alt="familia" class="img-responsive">
+				</figure>
+				<div class="row">
+				<figure class="animate-box">
+						<img src="images/Vega y Saúl (3).jpg" alt="familia" class="img-responsive">
+				</figure>
+				<div class="row">
+					<figure class="animate-box">
+					   <img src="images/Vega y Saúl (4).jpg" alt="familia" class="img-responsive">
+				   </figure>
+				   <div class="row">
+				   <figure class="animate-box">
+						   <img src="images/Vega y Saúl (5).jpg" alt="familia" class="img-responsive">
+				   </figure>
+				   <div class="row">
+				   <figure class="animate-box">
+						   <img src="images/Vega y Saúl (6).jpg" alt="familia" class="img-responsive">
+				   </figure>
+				   <div class="row">
+					<figure class="animate-box">
+							<img src="images/Vega y Saúl (7).jpg" alt="familia" class="img-responsive">
+					</figure>
+   
+
+
+		<div id="fh5co-content">
+			<div class="container">
+				<div class="row r-pb">
+					<div class="col-md-8 col-md-offset-2 text-center section-heading">
 						<h2 class="fh5co-section-title animate-box">Emma y Carla</h2>
 						<p class="fh5co-lead animate-box">"Nos encantaría volver a Mazagón"</p>
 					</div>
