--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>daniel ness fotografía</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Reportaje social en general, Mazagón, HUelva." />
+	<meta name="description" content="Reportaje social en general, Mazagón, Huelva." />
 	<meta name="keywords" content="reportaje social mazagón, retrato mazagón, paisaje mazagón, fotografía boda mazagón, fotografía de comunión mazagón, fotos carnet mazagón, fotografía life-style mazagón, retrato mazagón" />
 	<meta name="author" content="daniel ness fotografía" />
 
