--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Flexslider -->
+	<link rel="stylesheet" href="css/flexslider.css">
+	
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,300,700' rel='stylesheet' type='text/css'>
 	<!-- Animate -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Flexslider -->
-	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Icomoon -->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Bootstrap  -->
@@ -79,9 +81,14 @@
 			<nav id="fh5co-main-nav">
 				<ul>
 					<li><a href="#" data-nav-section="home">Principal</a></li>
-					<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>
+					<li><a href="#" data-nav-section="portfolio">Portfolio/Mi Tienda</a></li>
 					<li><a href="#" data-nav-section="about">Sobre Mí</a></li>
 					<li><a href="#" data-nav-section="contact">Contacto</a></li>
+					<!--<li><a href="#" data-nav-section="tienda">Tienda</a></li>
+					<span><i class="icon-arrow-down2"></i></span>-->
+
+					<!--<li><a href="#tienda.html" data-nav-section="#tienda.html">Mi Tienda</a></li>-->
+
 					
 				</ul>
 			</nav>
@@ -98,7 +105,7 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row text-center">
-							<h1 class="animate-box">me gustaría contar tu historia</h1>
+							<p class="texto-comunion">me gustaría contar tu historia</p>
 							<div class="fh5co-go animate-box">
 								<a href="#" class="js-fh5co-next">
 									Ver Portfolio
@@ -227,6 +234,18 @@
 								<div>
 									<span class="fh5co-meta"></span>
 									<h2 class="fh5co-title">Vídeo Promocional</h2>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 animate-box">
+						<div class="img-grid">
+							<img src="images/tienda/mujer cuadro.jpg" alt="tienda" class="img-responsive">
+							<p>mi tienda</p>
+							<a href="tienda.html" class="transition">
+								<div>
+									<span class="fh5co-meta"></span>
+									<h2 class="fh5co-title">Imprime Tus Fotos</h2>
 								</div>
 							</a>
 						</div>
@@ -379,7 +398,7 @@
 									<a href="#"><i class="icon-facebook"></i></a>
 								</li>
 								<li>
-									<a href="#"><i class="icon-instagram"></i></a>
+									<a href="https://www.instagram.com/dani3lness/" title="danielness"><i class="icon-instagram"></i></a>
 								</li>
 								
 								<!--<li>
