--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 					</div>
 					<div class="col-md-4 col-sm-4 col-xs-6 col-xxs-12 animate-box">
 						<div class="img-grid">
-							<img src="images/tienda/mujer cuadro.jpg" alt="tienda" class="img-responsive">
+							<img src="images/mujer cuadro.jpg" alt="tienda" class="img-responsive">
 							<p>mi tienda</p>
 							<a href="tienda.html" class="transition">
 								<div>
