--- a/tienda.html
+++ b/tienda.html
@@ -120,7 +120,7 @@
         <div class="products">
             <!--Card Start-->
             <div class="card">
-                <div class="img"><img src="./Images/papelfoto10x15.jpg" alt="tienda"></div>
+                <div class="img"><img src="./Images/papelfoto10x15.jpg" alt=""></div>
                 <!--<div class="desc">Women</div>-->
                 <div class="title">Papel Fotográfico</div>
                 <div class="box">
