--- a/tienda.html
+++ b/tienda.html
@@ -120,7 +120,7 @@
         <div class="products">
             <!--Card Start-->
             <div class="card">
-                <div class="img"><img src="./Images/papelfoto10x15.jpg" alt=""></div>
+                <div class="img"><img src="images/papelfoto10x15.jpg" alt=""></div>
                 <!--<div class="desc">Women</div>-->
                 <div class="title">Papel Fotográfico</div>
                 <div class="box">
@@ -140,7 +140,7 @@
             <!--Card End-->
             <!--Card Start-->
             <div class="card">
-                <div class="img"><img src="./Images/FOTOFACIL_FOAMBOARD_ESQ_1022x1022-1492526278.jpg" alt=""></div>
+                <div class="img"><img src="images/FOTOFACIL_FOAMBOARD_ESQ_1022x1022-1492526278.jpg" alt=""></div>
                 <!--<div class="desc">Women</div>-->
                 <div class="title">Foam(Cartón Pluma)</div>
                 <div class="box">
@@ -157,7 +157,7 @@
             <!--Card End-->
             <!--Card Start-->
             <div class="card">
-                <div class="img"><img src="./Images/lienzo.jpg" alt=""></div>
+                <div class="img"><img src="images/lienzo.jpg" alt=""></div>
                 <!--<div class="desc">Women</div>-->
                 <div class="title">Lienzo con Bastidor</div>
                 <div class="box">
@@ -174,7 +174,7 @@
             <!--Card End-->
             <!--Card Start-->
             <div class="card">
-                <div class="img"><img src="./Images/alu_dibond-905501467.png" alt=""></div>
+                <div class="img"><img src="images/alu_dibond-905501467.png" alt=""></div>
                 <!--<div class="desc">Women</div>-->
                 <div class="title">Aluminio (Dibond)</div>
                 <div class="box">
