--- a/index.html
+++ b/index.html
@@ -263,6 +263,16 @@
 							<p>Ponte en contacto con el código "Valentín23" para aprovechar esta promoción</p>
 						</div>
 					</div>-->
+					<div id="fh5co-special" data-section="special">
+					<div class="cardcontainer">
+						<div class="card">
+							<img src="images/Comunión Zamara (2).jpg">
+							<a href="special.html" class="transition"></a>
+							<h4>Comuniones 2024</h4>
+							<p>Reserva ya tu fecha para un bonito reportaje en exteriores!</p>
+							<!--<p>Ponte en contact</p>-->
+						</div>
+					</div>
 					
 				</div>
 
